--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ quarkus.http.test-port=8082
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
 
 # StackGres Configuration
-stackgres.namespace = stackgres
+stackgres.namespace = stackgres-operator
