--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,16 @@ quarkus.application.name=stackgres-operator
 quarkus.kubernetes.group=stackgres.io
 quarkus.http.port=8080
 quarkus.http.test-port=8082
-%dev.quarkus.log.category."io.stackgres".level=DEBUG
+
+# Logger Production
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%n
+quarkus.log.console.level=INFO
+quarkus.log.category."io.quarkus".level=WARN
+
+# Logger Development
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n
+%dev.quarkus.log.console.level=ALL
+%dev.quarkus.log.category."io.stackgres".level=ALL
 
 # StackGres Configuration
 stackgres.namespace = stackgres-operator
